# enjoy-slurm

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  README.md  conftest.py  docker-compose.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  release.yaml  slurm.yaml  slurm.yml  test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml  environment.yml  none.sh  slurm.sh
ci/slurm/: Dockerfile  docker-compose.yml
docs/: api.rst  conf.py  environment.yml  index.rst  new_section_notebook.ipynb  tutorial.nblink  whats_new.rst
docs/notebooks/: tutorial.ipynb
enjoy_slurm/: __init__.py  config.py  const.py  parser.py  slurm.py  tutorial.py  utils.py
notebooks/: test.sh  tutorial.ipynb
scripts/: configure.sh
tests/: __init__.py  test_dummy.py  test_job.py  test_on_levante.py  test_parser.py  test_slurm.py  test_tutorial.py  test_utils.py  test_with_slurm.py
